# paroquia-santa-rosa

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/rules/: backend.md  frontend.md  readme-sync.md
.claude/skills/backend-endpoint/: SKILL.md
.claude/skills/frontend-component/: SKILL.md
.claude/skills/frontend-page/: SKILL.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e68f24d3b019_initial_tables.py
backend/app/: main.py
backend/app/api/v1/: auth.py  avisos.py  contato.py  deps.py  eventos.py  liturgia.py  midia.py  newsletter.py  noticias.py  router.py
backend/app/cli/: createsuperuser.py
backend/app/core/: config.py  database.py  middleware.py  security.py
backend/app/models/: __init__.py  aviso.py  contato.py  evento.py  liturgia_cache.py  midia.py  newsletter.py  noticia.py  refresh_token.py  user.py
backend/app/repositories/: aviso_repo.py  contato_repo.py  evento_repo.py  liturgia_repo.py  midia_repo.py  newsletter_repo.py  noticia_repo.py  user_repo.py
backend/app/schemas/: auth.py  aviso.py  contato.py  evento.py  liturgia.py  midia.py  newsletter.py  noticia.py  user.py
backend/app/services/: liturgia_sync.py
frontend/: index.html  nginx.conf  package.json
frontend/src/: App.jsx
frontend/src/components/: AdminButton.jsx  AdminLayout.jsx  AdminSidebar.jsx  AdminTopbar.jsx  AvisoCard.jsx  ConfirmModal.jsx  ContatoForm.jsx  CounterSection.jsx  DataTable.jsx  ErrorBoundary.jsx  EventCard.jsx  Footer.jsx  GaleriaGrid.jsx  Hero.jsx  Layout.jsx  LiturgiaCard.jsx  Loading.jsx  (+10 more)
(+42 files in other folders)
